# copse

./: .gitignore  CMakeLists.txt  COPYING  README.md
.buzzy/: links.yaml  package.yaml
docs/: conf.py
include/: copse.h
include/copse/: context.h  cps.h  detect.h  fiber.h  round-robin.h
src/: CMakeLists.txt  copse.pc.in
src/detect/: context.c
src/libcopse/: context.c  cps.c  fiber.c  foo.c  round-robin.c
src/libcopse/context/: jump_arm_aapcs_elf_gas.S  jump_arm_aapcs_macho_gas.S  jump_arm_aapcs_pe_armasm.asm  jump_i386_ms_pe_masm.asm  jump_i386_sysv_elf_gas.S  jump_i386_sysv_macho_gas.S  jump_mips32_o32_elf_gas.S  jump_ppc32_sysv_elf_gas.S  jump_ppc64_sysv_elf_gas.S  jump_sparc64_sysv_elf_gas.S  jump_sparc_sysv_elf_gas.S  jump_tilegx_sysv_elf_gas.S  jump_x86_64_ms_pe_masm.asm  jump_x86_64_sysv_elf_gas.S  jump_x86_64_sysv_macho_gas.S  make_arm_aapcs_elf_gas.S  make_arm_aapcs_macho_gas.S  make_arm_aapcs_pe_armasm.asm  make_i386_ms_pe_masm.asm  make_i386_sysv_elf_gas.S  make_i386_sysv_macho_gas.S  make_mips32_o32_elf_gas.S  make_ppc32_sysv_elf_gas.S  make_ppc64_sysv_elf_gas.S  make_sparc64_sysv_elf_gas.S  make_sparc_sysv_elf_gas.S  make_tilegx_sysv_elf_gas.S  make_x86_64_ms_pe_masm.asm  make_x86_64_sysv_elf_gas.S  make_x86_64_sysv_macho_gas.S
tests/: CMakeLists.txt  helpers.h  test-cps.c  test-fiber.c
